# leadopt

./: MANIFEST.in  README.md  pyproject.toml
docs/: api.md  cli.md  constraints.md  operators.md  presets.md  scorers.md
examples/: README.md  instrument_train.py  medchem_docking_train_generate.py  np_fragment_beam.py
examples/1. QSAR/: QSAR_RL.py  preset_qsar.yaml  split.py  test.csv  test.py  training.csv  wrap_model.py
examples/1. QSAR/Output/: operators_sig.txt  preset_used.yaml  run_config.json  run_manifest.json  vocab.json
examples/1. QSAR/QSAR_model/: Dataset.csv  Raw_Dataset.csv  (+2 more)
examples/2. QSAR and QED, LogP/: QSAR_RL.py  preset_qsar.yaml
examples/3. Docking/: config.txt  protein.pdbqt  run_vina.bat
leadopt/: __init__.py
leadopt/actions/: __init__.py  base.py  space.py
leadopt/api/: __init__.py  beam.py  generate.py  presets.py  run.py  scoring.py  train.py  types.py
leadopt/cli/: __init__.py  _preset_path.py  beam.py  generate.py  main.py  run.py  sanity.py  train.py
leadopt/config/: __init__.py  preset_loader.py  preset_yaml.py  presets.py
leadopt/constraints/: __init__.py  base.py  medchem_filters.py  protected_core.py  similarity.py  size.py  suite.py
leadopt/core/: __init__.py  complexity.py  errors.py  mol.py  rdkit_utils.py  rules.py  run_logging.py  seeding.py  signatures.py  smiles.py
leadopt/engine/: __init__.py  beam_search.py  generate_ppo.py  run_rollout.py  train_ppo.py
leadopt/env/: __init__.py  graph_env.py
leadopt/evaluation/: __init__.py  baselines.py  beam_decomplexify.py  diversity.py  init_pool.py  runner.py
leadopt/models/: __init__.py  action_vocab.py  featurizers.py  mpnn_policy.py
leadopt/presets/: decomplexify.yaml  decomplexify_legacy.yaml  docking.yaml  docking_aligned_local.yaml  docking_modern.yaml  docking_vina_cli.yaml  linker.yaml  medchem_easy.yaml  medchem_quality_tier4.yaml  mpo.yaml  mpo_modern.yaml  multi_objective.yaml  np_fragment_discovery.yaml  qsar.yaml  qsar_modern.yaml  qsar_real.yaml  scaffold_hop.yaml
leadopt/rl/: __init__.py  ppo.py
leadopt/sar/: __init__.py  analyzer.py  conditional_effects.py  context.py  logger.py  props.py  schema.py  statistics.py
leadopt/score/: __init__.py  docking.py  mpo.py  qsar.py
leadopt/scoring/: __init__.py  base.py  composer.py  composite.py  docking.py  legacy.py  mpo.py  qsar.py  qsar_real.py  types.py
(+26 files in other folders)
